# ilovepython

./: .gitignore  config.py  pyproject.toml
clean_code_in_python/: argument.py  decorator.py  iter.py  mocking.py  mro.py
common/: type_annotation.ipynb  type_checking.ipynb
design_patterns/: function_oriented_strategy.py  strategy.py
design_patterns/strategy/: best_promo.py  promotions.py
effective_python/1_pythonic/: str_btyes.py
effective_python/4_metaclass_property/: attr.py  descriptor.py  meta1.py  meta2.py  prop.py
fluent_in_python/: 1_data_model.ipynb  23_dynamic_attributes.ipynb  23_dynamic_attributes.py  2_array_of_sequences.ipynb  osconfeed.json
snippet/: func_attrs.py  init_subclass.py
