[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Luca <luca@bluewhale.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
arrow = "^0.13.1"
requests = "^2.25.0"
mlops-utils = "^0.0.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[[tool.poetry.source]]
name = "bluewhale"
url = "https://pypi.bluewhale.kr"
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
